boutique-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boutique
#  labels:
#    istio-injection: enables
