boutique-app/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: boutique-gateway
  namespace: boutique
spec:
  selector:
    app: istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - store.local.io
